using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isReloading = "isReloading";
    internal static string performAttack = "performAttack";
    internal static string enemyPerformAttack = "enemyPerformAttack";
    internal static string enemyMoveSpeed = "enemyMoveSpeed";
    internal static string death = "death";
    internal static string takingDamage = "takingDamage";
}
